# scriptTimer

./: README.md  setup.cfg
src/scriptTimer/: ScriptTimer.py  __init__.py
src/scriptTimer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: runner.py
