[metadata]
name = scriptTimer
version = 0.0.2
author = Kartik
author_email = kartik42sharma@gmail.com
description = A script that records time taken by python scripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kartik-99/scriptTimer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src